<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/evaluationText"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

    <View
        android:id="@+id/outlineView"
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:background="@drawable/outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        android:layout_marginTop="10dp" />


    <ImageView
        android:id="@+id/campingCarImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@+id/outlineView"
        app:layout_constraintTop_toTopOf="@+id/outlineView"
        app:layout_constraintBottom_toBottomOf="@+id/outlineView"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/carImageDes" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test text"
        app:layout_constraintStart_toEndOf="@+id/campingCarImage"
        app:layout_constraintTop_toTopOf="@+id/outlineView"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/campingCarName"
        android:layout_width="200dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        android:layout_marginTop="5dp"
        android:text="test text 12312321123123123213123123"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/campingCarLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/campingCarName"
        app:layout_constraintStart_toStartOf="@+id/campingCarName"
        android:layout_marginTop="5dp"
        android:text="dafasdasdfsdf"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/reserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/outlineView"
        app:layout_constraintStart_toStartOf="@+id/outlineView"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/reserInfoText"
        />

    <View
        android:id="@+id/outlineView2"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:background="@drawable/outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reserInfo"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/rentDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/outlineView2"
        app:layout_constraintTop_toTopOf="@+id/outlineView2"
        android:layout_marginStart="20dp"
        android:text="@string/rentDateText"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_date_range_24"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/rentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rentDateTitle"
        android:text="2022.03.30(요일)"
        app:layout_constraintStart_toStartOf="@+id/rentDateTitle"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

    <View
        android:id="@+id/reserDateSeparateVIew"
        android:layout_width="1dp"
        android:layout_height="70dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@+id/rentDate"
        app:layout_constraintTop_toTopOf="@+id/rentDateTitle"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/returnDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/reserDateSeparateVIew"
        app:layout_constraintTop_toTopOf="@+id/reserDateSeparateVIew"
        android:layout_marginStart="20dp"
        android:text="@string/returnDateText"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_baseline_date_range_24"
        />

    <TextView
        android:id="@+id/returnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/returnDateTitle"
        android:text="2022.03.30(요일)"
        app:layout_constraintStart_toStartOf="@+id/returnDateTitle"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/outlineView2"
        app:layout_constraintStart_toStartOf="@+id/outlineView2"
        app:layout_constraintEnd_toEndOf="@+id/outlineView2"
        android:layout_marginTop="20dp"
        android:numStars="5"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        android:background="@drawable/round"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/finishButton"
        android:textSize="30sp"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>